# cookiecutter-pyproject-minimal

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: .gitignore  pyproject.toml
