[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
description = "{{ cookiecutter.package_description }}"
license = "{{ cookiecutter.license }}"
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.package_version }}"

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mock = "^4.0.2"
mypy = "^0.761"
pylint = "^2.4.4"
pytest = "^5.3.5"
pytest-mock = "^2.0.0"
